--- a/public/03-portfolio.html
+++ b/public/03-portfolio.html
@@ -768,50 +768,57 @@
 					</div>
 					<div class="sContact__row row">
 						<div class="sContact__col-map col-lg-7 col-xxl-8">
-							<div class="sContact__info">
-								<div class="locaton-dropdown dropdown">
-									<div class="locaton-dropdown__btn dropdown__btn">
-										<svg class="icon icon-geo-tag ">
-											<use xlink:href="img/svg/sprite.svg#geo-tag"></use>
-										</svg><span>Москва и&nbsp;МО</span>
-										<svg class="icon icon-chevron-down ">
-											<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-										</svg>
+							<div class="d-lg-none">
+								<div class="sContact__info">
+									<div class="locaton-dropdown dropdown">
+										<div class="locaton-dropdown__btn dropdown__btn">
+											<svg class="icon icon-geo-tag ">
+												<use xlink:href="img/svg/sprite.svg#geo-tag"></use>
+											</svg><span>Москва и&nbsp;МО</span>
+											<svg class="icon icon-chevron-down ">
+												<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+											</svg>
+										</div>
+										<div class="locaton-dropdown__content dropdown__content">
+											<a class="locaton-dropdown__item" href="#">Москва и&nbsp;МО
+											</a>
+											<a class="locaton-dropdown__item" href="#">Санкт-Петербург и&nbsp;область
+											</a>
+											<a class="locaton-dropdown__item" href="#">И так далее
+											</a>
+										</div>
 									</div>
-									<div class="locaton-dropdown__content dropdown__content">
-										<a class="locaton-dropdown__item" href="#">Москва и&nbsp;МО
-										</a>
-										<a class="locaton-dropdown__item" href="#">Санкт-Петербург и&nbsp;область
-										</a>
-										<a class="locaton-dropdown__item" href="#">И так далее
+									<div class="schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
+									</div>
+								</div>
+								<div class="sContact__wrap">
+									<h5>Телефоны</h5>
+									<div class="sContact__content">
+										<div class="sContact__phone-number"><a href="tel:+74952563067">+7 495 256 30 67 </a><br/><a href="tel:+74952563067">+7 495 256 30 67 </a>
+										</div>
+										<div class="sContact__flex">
+											<a class="sContact__links" href="#">
+												<svg class="icon icon-whatsapp ">
+													<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+												</svg><span>Whatsapp</span>
+											</a>
+											<a class="sContact__links" href="#">
+												<svg class="icon icon-instagram-map ">
+													<use xlink:href="img/svg/sprite.svg#instagram-map"></use>
+												</svg>
+											</a>
+											<a class="sContact__links sContact__links--yt" href="#">
+												<svg class="icon icon-youtube ">
+													<use xlink:href="img/svg/sprite.svg#youtube"></use>
+												</svg>
+											</a>
+										</div>
+										<a class="sContact__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">Обратный звонок
 										</a>
 									</div>
 								</div>
-								<div class="schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
-								</div>
-							</div>
-							<div class="sContact__wrap">
-								<h5>Телефоны</h5>
-								<div class="sContact__content">
-									<div class="sContact__phone-number"><a href="tel:+74952563067">+7 495 256 30 67 </a><br/><a href="tel:+74952563067">+7 495 256 30 67 </a>
-									</div>
-									<div class="sContact__flex">
-										<a class="sContact__links" href="#">
-											<svg class="icon icon-whatsapp ">
-												<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-											</svg><span>Whatsapp</span>
-										</a>
-										<a class="sContact__links" href="#">
-											<svg class="icon icon-instagram-map ">
-												<use xlink:href="img/svg/sprite.svg#instagram-map"></use>
-											</svg>
-										</a>
-										<a class="sContact__links sContact__links--yt" href="#">
-											<svg class="icon icon-youtube ">
-												<use xlink:href="img/svg/sprite.svg#youtube"></use>
-											</svg>
-										</a>
-									</div>
+								<div class="sContact__wrap d-lg-none mb-5">
+									<h5>Email</h5><a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.ru</a>
 								</div>
 							</div>
 							<div class="sContact__map">
@@ -849,7 +856,7 @@
 							</div>
 						</div>
 						<div class="sContact__col-info col-lg-5 col-xxl-4">
-							<div class="sContact__info d-none d-sm-block">
+							<div class="sContact__info d-none d-lg-flex">
 								<div class="locaton-dropdown dropdown">
 									<div class="locaton-dropdown__btn dropdown__btn">
 										<svg class="icon icon-geo-tag ">
@@ -871,35 +878,31 @@
 								<div class="schedule"><span>открыто</span><span>Пн&ndash;Вс &bull; 9:00&ndash;21:00</span>
 								</div>
 							</div>
-							<div class="sContact__wrap">
-								<div class="d-none d-sm-block">
-									<h5>Телефоны</h5>
-								</div>
-								<div class="sContact__content">
-									<div class="d-none d-sm-block">
-										<div class="sContact__phone-number"><a href="tel:+74952563067">+7 495 256 30 67 </a><a href="tel:+74952563067">+7 495 256 30 67 </a>
-										</div>
-										<a class="sContact__links" href="#">
-											<svg class="icon icon-whatsapp ">
-												<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-											</svg><span>Whatsapp</span>
-										</a>
-										<a class="sContact__links" href="#">
-											<svg class="icon icon-instagram-map ">
-												<use xlink:href="img/svg/sprite.svg#instagram-map"></use>
-											</svg>
-										</a>
-										<a class="sContact__links sContact__links--yt" href="#">
-											<svg class="icon icon-youtube ">
-												<use xlink:href="img/svg/sprite.svg#youtube"></use>
-											</svg>
-										</a>
+							<div class="sContact__wrap d-none d-lg-block">
+								<h5>Телефоны</h5>
+								<div class="sContact__content"> 
+									<div class="sContact__phone-number"><a href="tel:+74952563067">+7 495 256 30 67 </a><a href="tel:+74952563067">+7 495 256 30 67 </a>
 									</div>
-									<a class="sContact__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2">Обратный звонок
+									<a class="sContact__links" href="#">
+										<svg class="icon icon-whatsapp ">
+											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+										</svg><span>Whatsapp</span>
+									</a>
+									<a class="sContact__links" href="#">
+										<svg class="icon icon-instagram-map ">
+											<use xlink:href="img/svg/sprite.svg#instagram-map"></use>
+										</svg>
+									</a>
+									<a class="sContact__links sContact__links--yt" href="#">
+										<svg class="icon icon-youtube ">
+											<use xlink:href="img/svg/sprite.svg#youtube"></use>
+										</svg>
 									</a>
 								</div>
+								<a class="sContact__btn btn btn-primary btn-sm link-modal-js" href="#modal-call" data-title="Обратный звонок" data-text="Оставьте свой номер телефона, и&amp;nbsp;мы&amp;nbsp;вам перезвоним в&amp;nbsp;течение 15&amp;nbsp;минут." data-btn="Заказать обратный звонок" data-pic="2"> Обратный звонок
+								</a>
 							</div>
-							<div class="sContact__wrap">
+							<div class="sContact__wrap d-none d-lg-block mb-4">
 								<h5>Email</h5><a href="mailto:info@naves-na-zakaz.ru">info@naves-na-zakaz.ru</a>
 							</div>
 							<div class="sContact__wrap">
