edit slider and map

--- a/public/index.html
+++ b/public/index.html
@@ -592,7 +592,7 @@
 										<div class="row">
 											<div class="col-lg-8">
 												<div class="sSpecifications__slider-wrap">
-													<div class="sSpecifications__slider sSpecifications__slider--js-2 swiper">
+													<div class="sSpecifications__slider sSpecifications__slider--js swiper">
 														<div class="swiper-wrapper">
 																<div class="sSpecifications__slide swiper-slide">
 																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-1.jpg" data-fancybox="sCard-gallery">
@@ -636,7 +636,7 @@
 																</div>
 														</div>
 													</div>
-													<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js-2 swiper">
+													<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js swiper">
 														<div class="swiper-wrapper">
 																<div class="sSpecifications__slide swiper-slide">
 																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
@@ -759,12 +759,12 @@
 							</div>
 							<div class="col-12">
 								<!-- start sSpecifications-->
-								<div class="sSpecifications section" id="sSpecifications">
+								<div class="sSpecifications section">
 									<div class="sSpecifications__container container">
 										<div class="row">
 											<div class="col-lg-8">
 												<div class="sSpecifications__slider-wrap">
-													<div class="sSpecifications__slider sSpecifications__slider--js-3 swiper">
+													<div class="sSpecifications__slider sSpecifications__slider--js swiper">
 														<div class="swiper-wrapper">
 																<div class="sSpecifications__slide swiper-slide">
 																	<a class="sSpecifications__img-wrap" href="img/@2x/sSpecifications-md-1.jpg" data-fancybox="sCard-gallery">
@@ -808,7 +808,7 @@
 																</div>
 														</div>
 													</div>
-													<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js-3 swiper">
+													<div class="sSpecifications__slider-thumbs sSpecifications__slider-thumbs--js swiper">
 														<div class="swiper-wrapper">
 																<div class="sSpecifications__slide swiper-slide">
 																	<div class="sSpecifications__img-wrap sSpecifications__img-wrap--thumbs bg-wrap">
@@ -2807,7 +2807,7 @@
 								</div>
 							</div>
 							<div class="sContact__map">
-								<div id="map"></div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
+								<div id="map"></div><script src="https://api-maps.yandex.ru/2.1/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 								<script>
 									//- const map = document.querySelector('#map');
 									//- document.addEventListener('DOMContentLoaded', function(event) {
@@ -2896,7 +2896,7 @@
 								</div>
 								<div class="sContact__map-point" data-mark="55.67169106905855,37.2928495" data-zoom="10">Одинцово • ул. Транспортная, д. 2
 								</div>
-								<div class="sContact__map-point" data-mark="54.822272569867756,38.150632499999915" data-zoom="22">Кашира • ул. Стрелецкая, д. 66
+								<div class="sContact__map-point" data-mark="54.822272569867756,38.150632499999915" data-zoom="17">Кашира • ул. Стрелецкая, д. 66
 								</div>
 								<div class="sContact__map-point" data-mark="55.749850568991356,38.64405949999995" data-zoom="17">Фатеево • городской округ Павловский Посад, д. 118
 								</div>
