--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -665,12 +665,16 @@
 						<form>
 							<div class="row">
 								<div class="col-lg-8"> 
-									<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea>
+									<div class="form-wrap__input-wrap form-group">
+										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea><span class="form-wrap__input-title">Вопрос</span>
+										</label>
 									</div>
 									<!-- +e.input-wrap-->
 								</div>
 								<div class="col-lg-4">
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
+									<div class="form-wrap__input-wrap form-group">
+										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/><span class="form-wrap__input-title">Ваш номер телефона</span>
+										</label>
 									</div>
 									<!-- +e.input-wrap-->
 									<button class="btn btn btn-primary" type="submit">Получить консультацию </button>
@@ -762,10 +766,14 @@
 							<h4 class="modal-title-js"></h4>
 							<p class="modal-text-js"></p>
 						</div>
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
+						<div class="form-wrap__input-wrap form-group">
+							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/><span class="form-wrap__input-title">Ваше Имя</span>
+							</label>
 						</div>
 						<!-- +e.input-wrap-->
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/>
+						<div class="form-wrap__input-wrap form-group">
+							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/><span class="form-wrap__input-title">+7 ___ ___ __ __</span>
+							</label>
 						</div>
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit">
