--- a/public/index.html
+++ b/public/index.html
@@ -220,17 +220,23 @@
 									<p>Укажите габариты навеса </p>
 									<div class="row">
 										<div class="col-6">
-											<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ширина"/>
+											<div class="form-wrap__input-wrap form-group">
+												<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ширина"/><span class="form-wrap__input-title">Ширина</span>
+												</label>
 											</div>
 											<!-- +e.input-wrap-->
 										</div>
 										<div class="col-6">
-											<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Длина"/>
+											<div class="form-wrap__input-wrap form-group">
+												<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Длина"/><span class="form-wrap__input-title">Длина</span>
+												</label>
 											</div>
 											<!-- +e.input-wrap-->
 										</div>
 										<div class="col-12">
-											<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона +7 ___ ___ - __ - __"/>
+											<div class="form-wrap__input-wrap form-group">
+												<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона +7 ___ ___ - __ - __"/><span class="form-wrap__input-title">Ваш номер телефона +7 ___ ___ - __ - __</span>
+												</label>
 											</div>
 											<!-- +e.input-wrap-->
 										</div>
@@ -931,8 +937,7 @@
 							</div>
 							<div class="col">
 								<div class="sPortfolio__btn-wrap">
-									<button class="btn btn-primary">Показать еще</button>
-									<button class="btn btn-outline-secondary">Смотреть всё портфолио</button>
+									<button class="btn btn-primary">Показать еще</button><a class="btn btn-outline-secondary" href="#">Смотреть всё портфолио</a>
 								</div>
 							</div>
 						</div>
@@ -1202,34 +1207,42 @@
 						<h2>Получите цену навеса <br> и&nbsp;посмотрите, как он&nbsp;будет выглядеть</h2>
 					</div>
 					<div class="form-wrap">
-						<form>
+						<div class="form-wrap__form">
 							<div class="form-wrap__part">
 								<h4>Введите параметры навеса</h4>
 								<div class="row">
 									<div class="col-4">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="number" type="number" placeholder="Длина, мм" step="any"/>
+										<div class="form-wrap__input-wrap form-group">
+											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Длина, мм" step="any"/><span class="form-wrap__input-title">Длина, мм</span>
+											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-4">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="number" type="number" placeholder="Ширина, мм" step="any"/>
+										<div class="form-wrap__input-wrap form-group">
+											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Ширина, мм" step="any"/><span class="form-wrap__input-title">Ширина, мм</span>
+											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-4">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="number" type="number" placeholder="Высота, мм" step="any"/>
+										<div class="form-wrap__input-wrap form-group">
+											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Высота, мм" step="any"/><span class="form-wrap__input-title">Высота, мм</span>
+											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-12">
 										<div class="form-wrap__input-wrap form-group">
-											<select class="form-wrap__input form-select" name="select">
-												<option value="Материал кровли">Материал кровли</option>
-												<option value=" placeholder 1">placeholder 1</option>
-												<option value=" placeholder 2">placeholder 2</option>
-												<option value=" placeholder 3">placeholder 3</option>
-												<option value=" placeholder 4">placeholder 4</option>
-											</select>
+											<label>
+												<select class="form-wrap__input form-select" name="select">
+													<option value="Материал кровли">Материал кровли</option>
+													<option value=" placeholder 1">placeholder 1</option>
+													<option value=" placeholder 2">placeholder 2</option>
+													<option value=" placeholder 3">placeholder 3</option>
+													<option value=" placeholder 4">placeholder 4</option>
+												</select><span class="form-wrap__input-title">Материал кровли</span>
+											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
@@ -1326,12 +1339,16 @@
 							<div class="form-wrap__part">
 								<div class="row">
 									<div class="col-sm-6">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
+										<div class="form-wrap__input-wrap form-group">
+											<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/><span class="form-wrap__input-title">Ваше имя</span>
+											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-sm-6">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
+										<div class="form-wrap__input-wrap form-group">
+											<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/><span class="form-wrap__input-title">Ваш номер телефона</span>
+											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
@@ -1362,7 +1379,7 @@
 								</div>
 								<p>Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку <a href="#">персональных&nbsp;данных</a></p>
 							</div>
-						</form>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -2911,12 +2928,16 @@
 						<form>
 							<div class="row">
 								<div class="col-lg-8"> 
-									<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea>
+									<div class="form-wrap__input-wrap form-group">
+										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea><span class="form-wrap__input-title">Вопрос</span>
+										</label>
 									</div>
 									<!-- +e.input-wrap-->
 								</div>
 								<div class="col-lg-4">
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
+									<div class="form-wrap__input-wrap form-group">
+										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/><span class="form-wrap__input-title">Ваш номер телефона</span>
+										</label>
 									</div>
 									<!-- +e.input-wrap-->
 									<button class="btn btn btn-primary" type="submit">Получить консультацию </button>
@@ -3008,10 +3029,14 @@
 							<h4 class="modal-title-js"></h4>
 							<p class="modal-text-js"></p>
 						</div>
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
+						<div class="form-wrap__input-wrap form-group">
+							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/><span class="form-wrap__input-title">Ваше Имя</span>
+							</label>
 						</div>
 						<!-- +e.input-wrap-->
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/>
+						<div class="form-wrap__input-wrap form-group">
+							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/><span class="form-wrap__input-title">+7 ___ ___ __ __</span>
+							</label>
 						</div>
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit">
