--- a/public/05-thanks.html
+++ b/public/05-thanks.html
@@ -276,10 +276,14 @@
 							<h4 class="modal-title-js"></h4>
 							<p class="modal-text-js"></p>
 						</div>
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
+						<div class="form-wrap__input-wrap form-group">
+							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/><span class="form-wrap__input-title">Ваше Имя</span>
+							</label>
 						</div>
 						<!-- +e.input-wrap-->
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/>
+						<div class="form-wrap__input-wrap form-group">
+							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/><span class="form-wrap__input-title">+7 ___ ___ __ __</span>
+							</label>
 						</div>
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit">
