--- a/public/index.html
+++ b/public/index.html
@@ -221,21 +221,21 @@
 									<div class="row">
 										<div class="col-6">
 											<div class="form-wrap__input-wrap form-group">
-												<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ширина"/><span class="form-wrap__input-title">Ширина</span>
+												<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ширина"/>
 												</label>
 											</div>
 											<!-- +e.input-wrap-->
 										</div>
 										<div class="col-6">
 											<div class="form-wrap__input-wrap form-group">
-												<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Длина"/><span class="form-wrap__input-title">Длина</span>
+												<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Длина"/>
 												</label>
 											</div>
 											<!-- +e.input-wrap-->
 										</div>
 										<div class="col-12">
 											<div class="form-wrap__input-wrap form-group">
-												<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона +7 ___ ___ - __ - __"/><span class="form-wrap__input-title">Ваш номер телефона +7 ___ ___ - __ - __</span>
+												<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона +7 ___ ___ - __ - __"/>
 												</label>
 											</div>
 											<!-- +e.input-wrap-->
@@ -1213,21 +1213,21 @@
 								<div class="row">
 									<div class="col-4">
 										<div class="form-wrap__input-wrap form-group">
-											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Длина, мм" step="any"/><span class="form-wrap__input-title">Длина, мм</span>
+											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Длина, мм" step="any"/>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-4">
 										<div class="form-wrap__input-wrap form-group">
-											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Ширина, мм" step="any"/><span class="form-wrap__input-title">Ширина, мм</span>
+											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Ширина, мм" step="any"/>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-4">
 										<div class="form-wrap__input-wrap form-group">
-											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Высота, мм" step="any"/><span class="form-wrap__input-title">Высота, мм</span>
+											<label><input class="form-wrap__input form-control" name="number" type="number" placeholder="Высота, мм" step="any"/>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
@@ -1241,7 +1241,7 @@
 													<option value=" placeholder 2">placeholder 2</option>
 													<option value=" placeholder 3">placeholder 3</option>
 													<option value=" placeholder 4">placeholder 4</option>
-												</select><span class="form-wrap__input-title">Материал кровли</span>
+												</select>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
@@ -1340,14 +1340,14 @@
 								<div class="row">
 									<div class="col-sm-6">
 										<div class="form-wrap__input-wrap form-group">
-											<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/><span class="form-wrap__input-title">Ваше имя</span>
+											<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-sm-6">
 										<div class="form-wrap__input-wrap form-group">
-											<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/><span class="form-wrap__input-title">Ваш номер телефона</span>
+											<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
@@ -2929,14 +2929,14 @@
 							<div class="row">
 								<div class="col-lg-8"> 
 									<div class="form-wrap__input-wrap form-group">
-										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea><span class="form-wrap__input-title">Вопрос</span>
+										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea>
 										</label>
 									</div>
 									<!-- +e.input-wrap-->
 								</div>
 								<div class="col-lg-4">
 									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/><span class="form-wrap__input-title">Ваш номер телефона</span>
+										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
 										</label>
 									</div>
 									<!-- +e.input-wrap-->
@@ -3030,12 +3030,12 @@
 							<p class="modal-text-js"></p>
 						</div>
 						<div class="form-wrap__input-wrap form-group">
-							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/><span class="form-wrap__input-title">Ваше Имя</span>
+							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/><span class="form-wrap__input-title">+7 ___ ___ __ __</span>
+							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
