--- a/public/02-blog-page.html
+++ b/public/02-blog-page.html
@@ -214,35 +214,17 @@
 											</svg><span>Категории</span>
 										</div>
 										<div class="categories dropdown__content">
-											<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span>
-												<svg class="icon icon-categories-1 ">
-													<use xlink:href="img/svg/sprite.svg#categories-1"></use>
-												</svg>
+											<a class="categories__item active" href="#"><span>Советы <br> и&nbsp;лайфхаки</span><img src="img/svg/categories-1.svg" alt=""/>
 											</a>
-											<a class="categories__item" href="#"><span>Технические <br> детали</span>
-												<svg class="icon icon-categories-2 ">
-													<use xlink:href="img/svg/sprite.svg#categories-2"></use>
-												</svg>
+											<a class="categories__item" href="#"><span>Технические <br> детали</span><img src="img/svg/categories-2.svg" alt=""/>
 											</a>
-											<a class="categories__item" href="#"><span>Безопасность <br> и&nbsp;гарантии</span>
-												<svg class="icon icon-categories-3 ">
-													<use xlink:href="img/svg/sprite.svg#categories-3"></use>
-												</svg>
+											<a class="categories__item" href="#"><span>Безопасность <br> и&nbsp;гарантии</span><img src="img/svg/categories-3.svg" alt=""/>
 											</a>
-											<a class="categories__item" href="#"><span>Внешний <br> вид</span>
-												<svg class="icon icon-categories-4 ">
-													<use xlink:href="img/svg/sprite.svg#categories-4"></use>
-												</svg>
+											<a class="categories__item" href="#"><span>Внешний <br> вид</span><img src="img/svg/categories-4.svg" alt=""/>
 											</a>
-											<a class="categories__item" href="#"><span>Выбор <br> навеса</span>
-												<svg class="icon icon-categories-5 ">
-													<use xlink:href="img/svg/sprite.svg#categories-5"></use>
-												</svg>
+											<a class="categories__item" href="#"><span>Выбор <br> навеса</span><img src="img/svg/categories-5.svg" alt=""/>
 											</a>
-											<a class="categories__item" href="#"><span>Примеры <br> наших работ</span>
-												<svg class="icon icon-categories-6 ">
-													<use xlink:href="img/svg/sprite.svg#categories-6"></use>
-												</svg>
+											<a class="categories__item" href="#"><span>Примеры <br> наших работ</span><img src="img/svg/categories-6.svg" alt=""/>
 											</a>
 										</div>
 									</div>
@@ -1295,14 +1277,14 @@
 								<div class="row">
 									<div class="col-lg-8"> 
 										<div class="form-wrap__input-wrap form-group">
-											<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea><span class="form-wrap__input-title">Вопрос</span>
+											<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
 									</div>
 									<div class="col-lg-4">
 										<div class="form-wrap__input-wrap form-group">
-											<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/><span class="form-wrap__input-title">Ваш номер телефона</span>
+											<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
 											</label>
 										</div>
 										<!-- +e.input-wrap-->
@@ -1397,12 +1379,12 @@
 							<p class="modal-text-js"></p>
 						</div>
 						<div class="form-wrap__input-wrap form-group">
-							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/><span class="form-wrap__input-title">Ваше Имя</span>
+							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/><span class="form-wrap__input-title">+7 ___ ___ __ __</span>
+							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
