--- a/public/03-portfolio-2.html
+++ b/public/03-portfolio-2.html
@@ -666,14 +666,14 @@
 							<div class="row">
 								<div class="col-lg-8"> 
 									<div class="form-wrap__input-wrap form-group">
-										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea><span class="form-wrap__input-title">Вопрос</span>
+										<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Вопрос"></textarea>
 										</label>
 									</div>
 									<!-- +e.input-wrap-->
 								</div>
 								<div class="col-lg-4">
 									<div class="form-wrap__input-wrap form-group">
-										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/><span class="form-wrap__input-title">Ваш номер телефона</span>
+										<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш номер телефона"/>
 										</label>
 									</div>
 									<!-- +e.input-wrap-->
@@ -767,12 +767,12 @@
 							<p class="modal-text-js"></p>
 						</div>
 						<div class="form-wrap__input-wrap form-group">
-							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/><span class="form-wrap__input-title">Ваше Имя</span>
+							<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/><span class="form-wrap__input-title">+7 ___ ___ __ __</span>
+							<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="+7 ___ ___ __ __" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
